--- a/backend/scraping/dump/concourse/track8/grandcanyon194408.html
+++ b/backend/scraping/dump/concourse/track8/grandcanyon194408.html
@@ -28,7 +28,7 @@ the heyday of the passenger train, text messages were widely used,
 too&#8212;except they were known as "telegrams". Telegrams were fast, but
 expensive...a telegram from New York to Chicago might cost 6 cents a
 word with a 10-word minimum, in a time in which 60 cents would buy you
-a nice dinner in a café.&nbsp;Fortunately, the address on the
+a nice dinner in a cafï¿½.&nbsp;Fortunately, the address on the
 telegram was free. Should a telephone number be specified, the
 receiving office would call you with the message&#8212;back in the day, this
 was cheaper than a long-distance phone call&#8212;but most telegrams were
@@ -1500,7 +1500,7 @@ F 2 37P</td>
 <td class="services ttbody"> T C</td>
 <td class="ttbody"></td>
 <td class="times ttbody" style="font-weight: bold;">
-F 28P</td>
+F 2 28P</td>
 </tr>
 <tr>
 <td class="times ttbody" style="font-weight: bold;">
@@ -3401,7 +3401,7 @@ Barstow.</p>
 <div class="footer">
 <p>Original
 timetable information
-copyright&nbsp;©1943 by National Railway Publication Company.
+copyright&nbsp;ï¿½1943 by National Railway Publication Company.
 &nbsp;No known
 record&nbsp;of copyright renewal; it is believed this information
 is in
@@ -3412,7 +3412,7 @@ herald is a licensed mark owned by BNSF Railway
 Company.&nbsp;&nbsp;Santa Fe Railway herald obtained
 from&nbsp;BNSF Railway.</p>
 <p>All
-comments, original material and page design copyright ©2006-2015 by <a href="mailto:eric@streamlinerschedules.com">Eric H.
+comments, original material and page design copyright ï¿½2006-2015 by <a href="mailto:eric@streamlinerschedules.com">Eric H.
 Bowen</a>. Page created 2015-01-06.</p>
 <p style="text-align: left;">References:</p>
 <p style="text-align: left;"><a name="References"></a><sup>[*]</sup>Ross,
